--- a/app/build.gradle
+++ b/app/build.gradle
@@ -194,6 +194,7 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     testImplementation rootProject.ext.dependencies.junit
     androidTestImplementation rootProject.ext.dependencies.espresso
     androidTestImplementation rootProject.ext.dependencies.runner
