--- a/dialogtest/build.gradle
+++ b/dialogtest/build.gradle
@@ -47,5 +47,5 @@ dependencies {
     implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
     implementation 'com.android.support:design:27.1.1'
     implementation 'com.github.bumptech.glide:glide:3.7.0'
-
+    implementation 'com.github.bumptech.glide:glide:4.9.0'
 }
