--- a/dialogtest/build.gradle
+++ b/dialogtest/build.gradle
@@ -46,6 +46,8 @@ dependencies {
     implementation 'de.hdodenhof:circleimageview:3.0.0'
     implementation 'com.github.warkiz.widget:indicatorseekbar:2.1.2'
     implementation 'com.android.support:design:27.1.1'
-    implementation 'com.github.bumptech.glide:glide:3.7.0'
+
     implementation 'com.github.bumptech.glide:glide:4.9.0'
+    annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
+    implementation 'jp.wasabeef:glide-transformations:4.1.0'
 }
