--- a/config.gradle
+++ b/config.gradle
@@ -1,6 +1,6 @@
 def versions = [:]
 versions.SdkVersion = 27
-versions.minSdkVersion = 16
+versions.minSdkVersion = 19
 versions.buildToolsVersion = "28.0.3"
 versions.support = "27.1.1"
 
@@ -12,6 +12,7 @@ versions.smartrefresh = "1.1.0"
 versions.okhttp3 = "3.12.0"
 versions.okhttpUtils = "3.8.0"
 versions.glide = "4.9.0"
+versions.transformations="4.1.0"
 versions.logger = "2.2.0"
 versions.XTabLayout = "1.1.4"
 versions.soulpermission = "1.2.1"
@@ -107,7 +108,7 @@ ext {
     glide = [
             "glide"                : "com.github.bumptech.glide:glide:$versions.glide",
             "glide_compiler"       : "com.github.bumptech.glide:compiler:$versions.glide",
-            "glide_transformations": "jp.wasabeef:glide-transformations:4.1.0",
+            "glide_transformations": "jp.wasabeef:glide-transformations:$versions.transformations",
             "glide_okhttp3"        : "com.github.bumptech.glide:okhttp3-integration:4.8.0"
     ]
 
