--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -394,9 +394,14 @@
             android:name=".view.home.NotificationCenterActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
-        <!--TODO 资讯列表-->
+        <!-- TODO 资讯列表 -->
         <activity
             android:name=".view.home.InformationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseThemeForActivity" />
+        <!--TODO 我的积分首页-->
+        <activity
+            android:name=".view.integral.MineIntegralActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
     </application>
