添加强制下线功能预留入口

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -71,6 +71,10 @@
                 android:resource="@xml/file_paths_public" />
         </provider>
 
+        <service
+            android:name=".UmengPushIntentService"
+            android:permission="android.permission.BIND_JOB_SERVICE" />
+
         <!-- TODO 启动页 -->
         <activity
             android:name=".module.main.activity.SplashActivity"
