--- a/build.gradle
+++ b/build.gradle
@@ -19,6 +19,8 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.3.10"
         // NOTE: Do not place your application dependencies here; they belong
         // in the individual module build.gradle files
+        //增量编译工具
+        //classpath "com.antfortune.freeline:gradle:0.8.8"
     }
 }
 allprojects {
