--- a/dialogtest/build.gradle
+++ b/dialogtest/build.gradle
@@ -50,4 +50,7 @@ dependencies {
     implementation 'com.github.bumptech.glide:glide:4.9.0'
     annotationProcessor 'com.github.bumptech.glide:compiler:4.9.0'
     implementation 'jp.wasabeef:glide-transformations:4.1.0'
+
+    implementation 'com.airbnb.android:lottie:2.2.0'
+
 }
