课程播放器控制逻辑更新

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -29,6 +29,8 @@ android {
         multiDexKeepProguard file('multiDexKeep.pro') // keep specific classes
         testInstrumentationRunner rootProject.ext.android.testInstrumentationRunner
 
+        resConfigs "zh", "zh-rCN"
+
         javaCompileOptions {
             annotationProcessorOptions {
                 includeCompileClasspath = true
