--- a/config.gradle
+++ b/config.gradle
@@ -12,7 +12,7 @@ versions.smartrefresh = "1.1.0"
 versions.okhttp3 = "3.12.0"
 versions.okhttpUtils = "3.8.0"
 versions.glide = "4.9.0"
-versions.transformations="4.1.0"
+versions.transformations = "4.1.0"
 versions.logger = "2.2.0"
 versions.XTabLayout = "1.1.4"
 versions.soulpermission = "1.2.2"
@@ -78,7 +78,8 @@ ext {
             "wechat_opensdk" : "com.tencent.mm.opensdk:wechat-sdk-android-with-mta:+",
             "aliyun_oss"     : "com.aliyun.dpa:oss-android-sdk:+",
             "AlivcConan"     : "com.alivc.conan:AlivcConan:0.9.5",
-            "bugly"          : "com.tencent.bugly:crashreport:latest.release"
+            "bugly"          : "com.tencent.bugly:crashreport:latest.release",
+            "StatusBarUtil"  : "com.github.Ye-Miao:StatusBarUtil:1.7.5"
     ]
 
     okGo = [
