--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -430,9 +430,14 @@
             android:name=".module.integral.IntegralCommitActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
-        <!--TODO 积分最终支付结果-->
+        <!-- TODO 积分最终支付结果 -->
         <activity
             android:name=".module.integral.IntegralPayResultActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseThemeForActivity" />
+        <!--TODO 我要投诉-->
+        <activity
+            android:name=".module.questionbank.activity.ComplainActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
     </application>
