修改了下载页手机权限问题

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -43,6 +43,7 @@ android {
         sourceSets {
             main {
                 jniLibs.srcDir "src/main/libs"
+                //jniLibs.srcDirs = ['libs']
             }
         }
     }
