--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -43,7 +43,6 @@
     <uses-permission android:name="android.permission.READ_PROFILE" />
     <uses-permission android:name="android.permission.READ_CONTACTS" />
     <uses-permission android:name="android.permission.WRITE_CONTACTS" />
-
     <uses-permission
         android:name="android.permission.READ_LOGS"
         tools:ignore="ProtectedPermissions" />
@@ -449,6 +448,21 @@
         <!-- TODO 题库答疑详情(追问) -->
         <activity
             android:name=".module.answer.AnsweringQuestionActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseThemeForActivity" />
+        <!-- TODO 首页活动 -->
+        <activity
+            android:name=".module.home.event.EventActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseThemeForActivity" />
+        <!-- TODO 活动详情 -->
+        <activity
+            android:name=".module.home.event.EventDetailedActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseThemeForActivity" />
+        <!--TODO CPE课程首页-->
+        <activity
+            android:name=".module.home.cpe.CPECourseActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
     </application>
