开发我的活动及我的活动详情 离线下载添加wifi提示 优化课程播放目录交互逻辑

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -470,9 +470,14 @@
             android:name=".module.user.activity.CPEApplyForActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
-        <!--TODO CPE证明信息-->
+        <!-- TODO CPE证明信息 -->
         <activity
             android:name=".module.user.activity.CPEProveInformationActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/BaseThemeForActivity" />
+        <!--TODO 我的活动-->
+        <activity
+            android:name=".module.user.activity.MineEventActivity"
             android:screenOrientation="portrait"
             android:theme="@style/BaseThemeForActivity" />
     </application>
