--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -59,6 +59,13 @@
         tools:ignore="GoogleAppIndexingWarning"
         tools:replace="android:supportsRtl,allowBackup,label">
 
+        <!--全局Context提供者-->
+        <!--
+                <provider
+                    android:name=".utils.contextutils.ApplicationContextProvider"
+                    android:authorities="${applicationId}.contextprovider"
+                    android:exported="false" />
+        -->
         <!-- 相机适配 -->
         <!-- android:authorities="${applicationId}.provider" -->
         <provider
